Fix layout bug in project modal component

--- a/css/styles.css
+++ b/css/styles.css
@@ -681,7 +681,7 @@ button {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   position: fixed;
@@ -694,7 +694,7 @@ button {
   box-sizing: border-box;
   padding: 4.66% 4.66% 5.83%;
   width: 91.47vw;
-  height: 96vh;
+  height: 96%;
   background-color: #ffff;
   display: flex;
   flex-direction: column;
